# setdlms

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  config.yaml  eval_llada.py  papl_implementation_instructions.md  pareto_plots.py  plot_all_schedules.py  plot_power_schedule.py  plot_schedules.py  pyproject.toml  refusion_patch_instructions.md  requirements-lock.txt  requirements.txt  requirements.yaml  setup_env.sh  test_eval.py  test_hf_model.py  test_inf_stats.py  test_inf_stats_2.py  test_masking.py  test_sampler.py  test_schedules.py  test_schedules_all.py
bash_scripts/: bash_wrapper.sh  empire_sbatch_wrapper.sh  empire_srun_wrapper.sh  eval_model_paths.sh  g2_sbatch_wrapper.sh  g2_srun_wrapper.sh  g2_wrapper.sh  lambda_wrapper.sh  repro_paper_cnndm_tput_h100.sh  repro_paper_gsm8k_tput_h100.sh  repro_paper_infill_rouge_tput_h100.sh  run_likelihood_eval.sh  run_likelihood_eval_esolm_upstream.sh  run_likelihood_eval_esolm_upstream_zeroshot.sh  run_likelihood_eval_gsm8k.sh  run_likelihood_eval_lm1b.sh  run_likelihood_eval_owt.sh  run_likelihood_eval_wmt.sh  run_lm_eval_harness.sh  run_lm_eval_harness_intm.sh  run_lm_eval_harness_intm_samples.sh  run_lm_eval_harness_stats.sh  run_lm_eval_harness_tput.sh  run_mauve_owt_table4_bootstrap.sh  run_mcqa_eval_owt.sh  run_mdlm_cnndm_minnew50_repro.sh  run_plotting.sh  run_seq2seq_eval.sh  run_seq2seq_eval_cnndm.sh  run_seq2seq_eval_cnndm_tput.sh  run_seq2seq_eval_infill_nlp.sh  run_seq2seq_eval_wmt.sh  run_seq2seq_eval_wmt_tput.sh  run_train_aoarm_cnn.sh  run_train_aoarm_cnn_large.sh  run_train_aoarm_gsm8k.sh  run_train_aoarm_gsm8k_staggered.sh  run_train_aoarm_lm1b.sh  run_train_aoarm_owt.sh  (+52 more)
(+275 files in other folders)
