[project]
name = "dllm"
version = "0.1.0"
description = "Diffusion Language Models"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
dependencies = [
  "accelerate==1.11.0",
  "datasets==4.2.0",
  "einops==0.8.1",
  "fire==0.7.1",
  "hydra-core==1.3.2",
  "lm-eval==0.4.9",
  "mosaicml==0.32.1",
  "sentencepiece==0.2.1",
  "torch==2.6.0",
  "transformers==4.52.4",
  "wandb==0.22.2",
]

[dependency-groups]
dev = [
  "ipdb==0.13.13",
  "magic-wormhole==0.24.0",
  "pre-commit==4.2.0",
  "pytest==9.0.2",
  "pytype==2024.10.11",
  "ruff==0.11.0",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "Q", "I"]

[tool.ruff.lint.per-file-ignores]
"notebooks/**/*.ipynb" = ["E501"]
"src/denoiser/mdlm.py" = ["ERA001"]
"src/noise_schedule/noise_schedules.py" = ["ERA001"]
"scripts/**/*.py" = ["T201"]

[tool.isort]
profile = "black"
line_length = 88

[tool.black]
line-length = 88
target-version = ["py312"]
